--- a/settings.json
+++ b/settings.json
@@ -36,6 +36,10 @@
     "[xml]": {
         "editor.defaultFormatter": "redhat.vscode-xml"
     },
+    "codesnap.boxShadow": "none",
+    "codesnap.containerPadding": "0",
+    "codesnap.showWindowControls": false,
+    "codesnap.transparentBackground": true,
     "editor.autoClosingBrackets": "never",
     "editor.autoClosingQuotes": "never",
     "editor.bracketPairColorization.enabled": false,
@@ -59,6 +63,7 @@
         "**/.ammonite": true
     },
     "git.autofetch": true,
+    "inlineChat.showGutterIcon": true,
     "java.configuration.runtimes": [
         {
             "name": "JavaSE-1.8",
