--- a/settings.json
+++ b/settings.json
@@ -49,6 +49,7 @@
     "editor.fontWeight": 400,
     "editor.guides.bracketPairs": "active",
     "editor.suggestSelection": "first",
+    "editor.wordWrap": "on",
     "explorer.confirmDelete": false,
     "explorer.confirmDragAndDrop": false,
     "files.exclude": {
